# chess

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
board/: Cargo.toml
board/bitboard/: Cargo.toml
board/bitboard/src/: bitboard.rs  detailed_move.rs  lib.rs
board/src/: lib.rs  variants.rs
board/src/variants/: mod.rs  traditional.rs
boards/bitboard/: Cargo.toml
boards/bitboard/src/: bitboard.rs  detailed_move.rs  lib.rs
games_database/: Cargo.toml  build.rs
games_database/positions/: lichess_jan_2013_positions.txt
games_database/src/: lib.rs  main.rs
lib/interner/src/: lib.rs
lib/utils/src/: lib.rs
players/: Cargo.toml
players/bfs-minimax/: Cargo.toml
players/bfs-minimax/src/: lib.rs
players/monke/: Cargo.toml
players/monke/src/: lib.rs
players/src/: lib.rs
players/terminal-ui/: Cargo.toml
players/terminal-ui/src/: lib.rs
