[workspace]

members = [
    "backend",
    "board",
    "board/bitboard",
    "games_database",
    "lib/utils",
    "lib/interner",
    "players",
    "players/monke",
    "players/terminal-ui",
]

[workspace.dependencies]
quickcheck = "1.0"
rand = "0.8"
thiserror = "1.0"
ureq = "2.0"
zstd = "0.12"

[profile.test]
opt-level = 2
