[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitboard.path = "../board/bitboard"
board.path = "../board"
bfs-minimax.path = "../players/bfs-minimax"
monke.path = "../players/monke"
players.path = "../players"
terminal-ui.path = "../players/terminal-ui"
