[package]
name = "games_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board = { version = "0.1.0", path = "../board" }
bitboard.path = "../board/bitboard"
interner = { version = "0.1.0", path = "../lib/interner" }
rand = { workspace = true, features = ["small_rng"] }

[build-dependencies]
ureq.workspace = true
zstd.workspace = true
