[package]
name = "bitboard"
version = "0.1.0"
edition = "2021"

[dependencies]
board.path = "../../board"
rand = { workspace = true, optional = true }
thiserror.workspace = true
utils = { version = "0.1.0", path = "../../lib/utils" }

[features]
magic-search = ["dep:rand"]

[[bin]]
name = "magic-bitboard-search"
required-features = ["magic-search"]

[[bin]]
name = "magic-bitboard-generation"

[dev-dependencies]
games_database = { path = "../../games_database" }
quickcheck.workspace = true
