[package]
name = "bitboard"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags.workspace = true
board.path = "../../board"
thiserror.workspace = true
utils = { version = "0.1.0", path = "../../lib/utils" }

[dev-dependencies]
games_database = { path = "../../games_database" }
quickcheck.workspace = true
