[package]
name = "bfs-minimax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitboard.path = "../../board/bitboard"
board.path = "../../board"
games_database = { path = "../../games_database", optional = true }
players.path = ".."
rand = { workspace = true, features = ["small_rng"] }
utils.path = "../../lib/utils"

[features]
benchmark = ["dep:games_database"]

[[bin]]
name = "benchmarking"
required-features = ["benchmark"]
