[package]
name = "monke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitboard = { version = "0.1.0", path = "../../board/bitboard" }
board = { version = "0.1.0", path = "../../board" }
players = { version = "0.1.0", path = ".." }
rand = { workspace = true, features = ["small_rng"] }
